improved on main app features

--- a/allifmaalcommonapp/templates/allifmaalcommonapp/assets/add-asset.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/assets/add-asset.html
@@ -223,11 +223,7 @@
         <td>{{form.category}}</td>
     
         </tr>
-        <tr>
-          <td class="allif-fix-table-col">Staff Responsible</td>
-          <td>{{form.employee}}</td>
-      
-          </tr>
+       
           <tr>
             <td class="allif-fix-table-col">Asset A/C</td>
             <td>{{form.asset_account}}</td>
@@ -255,7 +251,7 @@
                 </tr>
                  <tr>
             <td class="allif-fix-table-col">Staff in Charge</td>
-            <td>{{form.emplyee_in_charge}}</td>
+            <td>{{form.employee_in_charge}}</td>
         
             </tr>
         </tbody>
