--- a/allifmaalcommonapp/templates/allifmaalcommonapp/companies/company-details-clients.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/companies/company-details-clients.html
@@ -63,6 +63,9 @@
       
        <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonCategories' user_var glblslug %}">Categories</a></li>
       <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonCodes' user_var glblslug %}">Codes</a></li>
+      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonGeneralLedgers' user_var glblslug %}">Accounts</a></li>
+    
+      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonSpaces' user_var glblslug %}">Spaces</a></li>
     </div>
     </ul>
   </div>
