--- a/allifmaalcommonapp/templates/allifmaalcommonapp/operations/years/terms/add_term.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/operations/years/terms/add_term.html
@@ -144,7 +144,7 @@
 </div><!--end of main container of the page....-->
 {% else %}
 <div class="row mt-12"> <!--start....table row-->
-  <div class="table-details-content-description">Add New Operation Year</div>
+  <div class="table-details-content-description">Add New Operation Year Term</div>
   <form method='POST' action=''>{% csrf_token %}
   <div class="col-md-12"> <!--start....table column-->
   <div class="allif-scroll-table">
