--- a/allifmaalcommonapp/templates/allifmaalcommonapp/spaces/units/space_unit_details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/spaces/units/space_unit_details.html
@@ -72,6 +72,31 @@
             <td> {{allifquery.branch}}</td>
         
             </tr>
+             <tr>
+            <td class="allif-fix-table-col">Department</td>
+            <td> {{allifquery.department}}</td>
+        
+            </tr>
+             <tr>
+            <td class="allif-fix-table-col">Main Space</td>
+            <td>{{allifquery.space}}</td>
+        
+            </tr>
+         <tr>
+          <td class="allif-fix-table-col">Unit Number</td>
+          <td>{{allifquery.space_number}}</td>
+        </tr>
+        <tr>
+          <td class="allif-fix-table-col">Name</td>
+          <td>{{allifquery.name}}</td>
+      
+          </tr>
+            <tr>
+            <td class="allif-fix-table-col">Description</td>
+            <td>{{allifquery.description}}</td>
+            </tr>
+       
+       
            
         </tbody>
         </table>
@@ -85,25 +110,51 @@
        <div class="allif-details-card table-responsive">
        <table class="table table-layout">
         <tbody>
-              <tr>
-            <td class="allif-fix-table-col">Department</td>
-            <td> {{allifquery.department}}</td>
-        
-            </tr>
+           <tr>
+          <td class="allif-fix-table-col">Unit Cost</td>
+          <td>{{allifquery.unitcost}}</td>
+        </tr>
+        <tr>
+          <td class="allif-fix-table-col">Unit Price</td>
+          <td>{{allifquery.unitprice}}</td>
+        </tr>
+       
+          <tr>
+          <td class="allif-fix-table-col">Amenities</td>
+          <td>{{allifquery.amenities}}</td>
+      
+          </tr>
            
           <tr>
-            <td class="allif-fix-table-col">Warehouse</td>
-            <td>{{allifquery.name}}</td>
+            <td class="allif-fix-table-col">Base Price/Night</td>
+            <td>{{allifquery.base_price_per_night}}</td>
         
             </tr>
-          
-          <tr>
-            <td class="allif-fix-table-col">Comments</td>
-            <td>{{allifquery.comments}}</td>
+             <tr>
+            <td class="allif-fix-table-col">Max Occupancy</td>
+            <td>{{allifquery.max_occupancy}}</td>
         
             </tr>
-
-           
+             <tr>
+            <td class="allif-fix-table-col">Monthly Rent</td>
+            <td>{{allifquery.monthly_rent}}</td>
+        
+            </tr>
+        
+         
+       <tr>
+          <td class="allif-fix-table-col">Area in m2</td>
+          <td>{{allifquery.area_sqm}}</td>
+        </tr>
+         <tr>
+          <td class="allif-fix-table-col">#Rooms</td>
+          <td>{{allifquery.rooms}}</td>
+        </tr>
+         <tr>
+          <td class="allif-fix-table-col">#Washrooms</td>
+          <td>{{allifquery.washrooms}}</td>
+        </tr>
+     
           </tbody>
           </table>
           </div>
@@ -116,7 +167,38 @@
        <!--start of the table here-->
        <table class="table table-layout">
         <tbody>
+           <tr>
+            <td class="allif-fix-table-col">Capacity</td>
+            <td>{{allifquery.capacity}}</td>
+        
+            </tr>
+           <tr>
+          <td class="allif-fix-table-col">Space Floor</td>
+          <td>{{allifquery.space_floor}}</td>
+        </tr>
 
+             <tr>
+            <td class="allif-fix-table-col">Space Type</td>
+            <td>{{allifquery.space_type}}</td>
+        
+            </tr>
+           
+             <tr>
+            <td class="allif-fix-table-col">Unit Type</td>
+            <td>{{allifquery.unit_type}}</td>
+        
+            </tr>
+              <tr>
+            <td class="allif-fix-table-col">Status</td>
+            <td>{{allifquery.current_status}}</td>
+        
+            </tr>
+             <tr>
+            <td class="allif-fix-table-col">Staff in Charge</td>
+            <td>{{allifquery.emplyee_in_charge}}</td>
+        
+            </tr>
+        
           <tr>
             <td class="allif-fix-table-col">Date</td>
             <td>{{allifquery.date}}</td>
