--- a/allifmaalcommonapp/templates/allifmaalcommonapp/website/website.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/website/website.html
@@ -35,10 +35,12 @@
             <li><a class="nav-link scrollto" href="#modules">Modules</a></li>
             <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li>
             <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+            <li><a class="nav-link scrollto" href="{% url 'allifmaalcommonapp:commonEngineering' %}">Landing</a></li>
            
             
             <li><a class="getstarted scrollto" href="{% url 'allifmaalusersapp:userLoginPage' %}">Login</a></li>
 
+            
           </ul>
           <i class="bi bi-list mobile-nav-toggle">Menu</i>
         </nav><!-- .navbar -->
@@ -51,12 +53,12 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1">
-            <h1>Achieve your business goals with AI driven <span class="allifmaal-erp-styling">Allifmaal ERP</span>,
+            <h1>Achieve your business goals with AI driven <span class="allifmaal-erp-styling">Allifapp ERP</span>,
              
                 the smarter way to manage your organization seamlessly.</h1>
             <h6>Digitize your deal, discover your dreams.</h6>
             <div class="d-flex justify-content-center justify-content-lg-start">
-              <a href="#about" class="btn-get-started scrollto">About Allifmaal ERP</a>
+              <a href="#about" class="btn-get-started scrollto">Allifapp ERP is a brand of <span class="allifmaal-erp-styling"> Allifmaal</span></a>
              
             </div>
           </div>
@@ -75,13 +77,13 @@
         <div class="container" data-aos="fade-up">
   
           <div class="section-title">
-            <h2>About Allifmaal ERP</h2>
+            <h2>About Allifapp ERP</h2>
           </div>
   
           <div class="row content">
             <div class="col-lg-6">
               <p>
-                Allifmaal ERP is a leading world-class user friendly suite of business management applications for all types of companies and organizations.
+                Allifapp ERP is a leading world-class user friendly suite of business management applications for all types of companies and organizations.
                 Being a cutting-edge ERP system, it was designed to streamline operations, enhance productivity, and drive growth.
               </p>
 
@@ -93,7 +95,7 @@
             <div class="col-lg-6 pt-4 pt-lg-0">
 
               <p>
-                Allifmaal ERP is meticulously developed by a team of experienced developers. Our developers bring years of expertise in software engineering, business processes, and industry best practices to create a robust and reliable ERP solution tailored to meet the diverse needs of modern businesses world.
+                Allifapp ERP is meticulously developed by a team of experienced developers. Our developers bring years of expertise in software engineering, business processes, and industry best practices to create a robust and reliable ERP solution tailored to meet the diverse needs of modern businesses world.
               </p>
             
               <div>
@@ -113,7 +115,7 @@
         <div class="container" data-aos="fade-up">
   
           <div class="section-title">
-            <h2>Allifmaal ERP Serves The Following Industries</h2>
+            <h2>Allifapp ERP Serves The Following Industries</h2>
           </div>
   
           <div class="row content">
@@ -156,7 +158,7 @@
   
           <div class="row">
             <div class="content-why-allifmaal-erp">
-              <h3>Why Choose Allifmaal ERP?</h3>
+              <h3>Why Choose Allifapp ERP?</h3>
              
             </div>
   
@@ -168,7 +170,7 @@
                     <a data-bs-toggle="collapse" class="collapse" data-bs-target="#accordion-list-1"><span>1</span>Comprehensive Integration<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                     <div id="accordion-list-1" class="collapse show" data-bs-parent=".accordion-list">
                       <p>
-                        Allifmaal ERP seamlessly integrates all essential business functions, including finance, HR, supply chain, and customer relationship management (CRM). This centralizes data, eliminates silos, and ensures that all departments work cohesively.
+                        Allifapp ERP seamlessly integrates all essential business functions, including finance, HR, supply chain, and customer relationship management (CRM). This centralizes data, eliminates silos, and ensures that all departments work cohesively.
                       </p>
                     </div>
                   </li>
@@ -184,7 +186,7 @@
                     <a data-bs-toggle="collapse" class="collapse" data-bs-target="#accordion-list-1"><span>3</span>Real-Time Data and Reporting <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                     <div id="accordion-list-1" class="collapse show" data-bs-parent=".accordion-list">
                       <p>
-                        Allifmaal ERP provides real-time insights and analytics, enabling better decision-making. With up-to-date information at their fingertips, managers can quickly respond to market dynamics and optimize operations.
+                        Allifapp ERP provides real-time insights and analytics, enabling better decision-making. With up-to-date information at their fingertips, managers can quickly respond to market dynamics and optimize operations.
                       </p>
                     </div>
                   </li>
@@ -237,7 +239,7 @@
                     <a data-bs-toggle="collapse" class="collapse" data-bs-target="#accordion-list-1"><span>8</span>Customization and Personalization<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                     <div id="accordion-list-1" class="collapse show" data-bs-parent=".accordion-list">
                       <p>
-                        Allifmaal ERP system can be tailored to meet the specific needs of your business. This customization ensures that the system aligns perfectly with your workflows and business processes.
+                        Allifapp ERP system can be tailored to meet the specific needs of your business. This customization ensures that the system aligns perfectly with your workflows and business processes.
                       </p>
                     </div>
                   </li>
@@ -246,7 +248,7 @@
                     <a data-bs-toggle="collapse" class="collapse" data-bs-target="#accordion-list-1"><span>9</span> Vendor Support and Training<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                     <div id="accordion-list-1" class="collapse show" data-bs-parent=".accordion-list">
                       <p>
-                        Allifmaal ERP system comes with comprehensive support and training resources. This ensures that your team can quickly get up to speed and make the most of the system's features.
+                        Allifapp ERP system comes with comprehensive support and training resources. This ensures that your team can quickly get up to speed and make the most of the system's features.
                       </p>
                     </div>
                   </li>
@@ -277,8 +279,8 @@
         <div class="container" data-aos="fade-up">
   
           <div class="section-title">
-            <h2>Allifmaal Modules</h2>
-            <p>Allifmaal ERP comprises of the below sub-modules that work togther to achieve the goals of your organization.</p>
+            <h2>Allifapp ERP Modules</h2>
+            <p>Allifapp ERP comprises of the below sub-modules that work togther to achieve the goals of your organization.</p>
           </div>
   
           <div class="row">
@@ -329,7 +331,7 @@
         <div class="container" data-aos="fade-up">
   
         <div class="section-title">
-          <h2>Allifmaal Galery</h2>
+          <h2>Allifapp Galery</h2>
           <p>Feel the difference</p>
         </div>
   
